[package]
name = "options_pricing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "options_pricing"
path = "src/main.rs"

[[bin]]
name = "web_gui"
path = "src/web_server.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
plotters = { version = "0.3.7", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "point_series", "ttf"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.17"
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.6"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = "1.33"
uuid = { version = "1.0", features = ["v4"] }
